rqPen 4.0.1 (Release date: 2024-04-22)
=============
* Fixed a bug where rq.group.pen() was not working with group SCAD and norm=2.

rqPen 4.0  (Release date: 2024-04-18)
=============
* Added rq.gq.pen() and rq.gq.pen.cv() for a group lasso penalty across the quantiles that gurantees that when estimating multiple quantiles the same variables are selected across all quantiles. 
* Removed QICD algorithm. Maintaing the C and Fortran code used in the QICD approaches along with the new C++ code is cumbersome.  In addition, the Huber approaches tend to be noticeably faster and provide similar solutions. 

rqPen 3.2.2 (Release date: 2024-03-13)
=============
* Fixed issue where QICD algorithm was not working when called from rq.pen(). 

rqPen 3.2.1 (Release date: 2023-08-24)
=============
* Number of folds does not need to be specified when users specify their own fold id. 
* Attempted to make changes to satisfy requests by CRAN team but do not effect how the package is used. 

rqPen 3.2 (Release date: 2023-07-14)
=============
* Updated predict functions so they are all using newx. Some were using newdata. 
* Improved print.rq.pen.seq() output to provide number of nonzero coefficients by lambda for multiple models. 
* Updated rq.group.pen() to include weights for the quantile loss function
* Fixed bug in rq.group.pen.cv() and rq.pen.cv() where prediction was done on training data instead of testing data
* Changed name of some internal functions that were using R defaults in the incorrect way. For instance, predict.errors is now predErrors.
* Fixed function predErrors to properly return values. 


rqPen 3.1.3 (Release date: 2023-04-11)
=============
* A "fix" had been made for qbic() that was not needed and in 3.1.3 was reverted back to the correct function. 

rqPen 3.1.2 (Release date: 2023-03-28)
=============
* Moved some functions to internal that are only relevant to functions that are no longer exported. 