@@ -1,6 +1,10 @@
 rqPen 4.0.1 (Release date: 2024-04-22)
 =============
 * Fixed a bug where rq.group.pen() was not working with group SCAD and norm=2.
+* Updated rq.gq.pen.cv() to accomodate notes.
+* Updated rq.gq.pen.cv(), rq.group.pen.cv(), and rq.pen.cv() help files to include use of weights in cross-validation. 
+* Cleaned up some minor issues in examples, were code ran fine but presentation was poor. 
+* Added some new error checking to functions.
 
 rqPen 4.0  (Release date: 2024-04-18)
 =============
